--- a/Plant/Areas/Admin/Views/AdminCategoryNews/AddLanguages.cshtml
+++ b/Plant/Areas/Admin/Views/AdminCategoryNews/AddLanguages.cshtml
@@ -40,11 +40,9 @@
                             <span asp-validation-for="CategoryNewName" class="text-danger"></span>
                         </div>
                         <div class="col-md-12 col-sm-12"></div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <input type="submit" value="Save" class="btn btn-primary" />
-                        </div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <a class="btn btn-dark" asp-action="Index">Back</a>
+                        <div class="form-group my-2 d-flex align-items-center">
+                            <a asp-action="Index" class="btn btn-dark mr-1">Đóng <i class="far fa-times"></i></a>
+                            <input type="submit" name="" value="Cập nhật ngôn ngữ &#xf00c" class="btn btn-success mr-2 fa-input">
                         </div>
                     </div>
 
