--- a/Plant/Areas/Admin/Views/AdminCategoryNews/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminCategoryNews/Index.cshtml
@@ -13,6 +13,11 @@
     </ol>
 </nav>
 <!-- /Breadcrumb -->
+<!-- Title -->
+<div class="hk-pg-header">
+    <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="file-text"></i></span></span>Danh mục tin tức</h4>
+</div>
+<!-- /Title -->
 <section class="hk-sec-wrapper mb-3">
     <div class="row">
         <div class="form-group col-sm col-md-2 col-lg-2">
