--- a/Plant/Areas/Admin/Views/AdminLanguages/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminLanguages/Index.cshtml
@@ -12,6 +12,11 @@
     </ol>
 </nav>
 <!-- /Breadcrumb -->
+<!-- Title -->
+<div class="hk-pg-header">
+    <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="file-text"></i></span></span>Danh sách ngôn ngữ</h4>
+</div>
+<!-- /Title -->
 <section class="hk-sec-wrapper mb-3">
     <a class="btn btn-info mb-2" asp-action="Create">
         Add
