--- a/Plant/Areas/Admin/Views/AdminCategoryNews/Delete.cshtml
+++ b/Plant/Areas/Admin/Views/AdminCategoryNews/Delete.cshtml
@@ -43,11 +43,9 @@
                             <label class="control-label">Mã danh mục cha</label>
                             <input value="@Model.CategoryNew.ParentNewId" class="form-control" readonly />
                         </div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <input type="submit" value="Delete" class="btn btn-danger" />
-                        </div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <a class="btn btn-dark" asp-action="Index">Back</a>
+                        <div class="form-group my-2 d-flex align-items-center">
+                            <a asp-action="Index" class="btn btn-dark mr-1">Đóng <i class="far fa-times"></i></a>
+                            <input type="submit" name="" value="Delete &#xf00c" class="btn btn-danger mr-2 fa-input">
                         </div>
                     </div>
 
