--- a/Plant/Areas/Admin/Views/AdminCategoryNews/Edit.cshtml
+++ b/Plant/Areas/Admin/Views/AdminCategoryNews/Edit.cshtml
@@ -45,11 +45,9 @@
                             <input asp-for="ParentNewId" class="form-control" type="number" />
                             <span asp-validation-for="ParentNewId" class="text-danger"></span>
                         </div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <input type="submit" value="Save" class="btn btn-primary" />
-                        </div>
-                        <div class="form-group col-md-1 col-sm-12">
-                            <a class="btn btn-dark" asp-action="Index">Back</a>
+                        <div class="form-group my-2 d-flex align-items-center">
+                            <a asp-action="Index" class="btn btn-dark mr-1">Đóng <i class="far fa-times"></i></a>
+                            <input type="submit" name="" value="Cập nhật &#xf00c" class="btn btn-success mr-2 fa-input">
                         </div>
                     </div>
 
