--- a/Plant/Areas/Admin/Views/AdminLanguages/Edit.cshtml
+++ b/Plant/Areas/Admin/Views/AdminLanguages/Edit.cshtml
@@ -37,11 +37,9 @@
                                         <input asp-for="LangName" class="form-control" />
                                         <span asp-validation-for="LangName" class="text-danger"></span>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="submit" value="Save" class="btn btn-primary" />
-                                    </div>
-                                    <div class="form-group">
-                                        <a class="btn btn-dark" asp-action="Index">Back</a>
+                                    <div class="form-group my-2 d-flex align-items-center">
+                                        <a asp-action="Index" class="btn btn-dark mr-1">Đóng <i class="far fa-times"></i></a>
+                                        <input type="submit" name="" value="Cập nhật &#xf00c" class="btn btn-success mr-2 fa-input">
                                     </div>
 
                                 </form>
