--- a/Plant/Areas/Admin/Views/AdminUsers/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminUsers/Index.cshtml
@@ -1,66 +1,124 @@
-﻿@model IEnumerable<Plant.Models.User>
+﻿@using PagedList.Core.Mvc
+@model PagedList.Core.IPagedList<Plant.Models.User>
 
 @{
-    ViewData["Title"] = "Index";
+    int CurrentPage = ViewBag.CurrentPage;
+    ViewData["Title"] = "Index" + CurrentPage;
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Role)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role.RoleName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
-            </td>
-        </tr>
+<!-- Breadcrumb -->
+<nav class="hk-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb breadcrumb-light bg-transparent">
+        <li class="breadcrumb-item"><a asp-action="Index"></a>Quản lí hệ thống</li>
+        <li class="breadcrumb-item active" aria-current="page">Danh sách tài khoản</li>
+    </ol>
+</nav>
+<!-- /Breadcrumb -->
+<!-- Title -->
+<div class="hk-pg-header">
+    <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="file-text"></i></span></span>Danh sách tài khoản</h4>
+</div>
+<!-- /Title -->
+
+<section class="hk-sec-wrapper mb-3">
+    <div class="row">
+        <div class="form-group col-sm col-md-4 col-lg-3">
+            <select class="form-control" id="txtRoleId" name="txtRoleId" asp-items="ViewBag.Quyentruycap">
+                <option value="0" selected>Chọn quyền truy cập</option>
+            </select>
+        </div>
+        <div class="form-group col-sm col-md-2 col-lg-2">
+            <a class="btn btn-info" asp-action="Create">
+                Add
+            </a>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-sm">
+            <div class="table-wrap">
+                <div class="table-responsive">
+                    <table class="table table-sm table-hover mb-0">
+                        <thead class="thead-light">
+                            <tr>
+                                <th class="py-3">#Mã</th>
+                                <th class="py-3">Họ tên</th>
+                                <th class="py-3">Email</th>
+                                <th class="py-3">Quyền truy cập</th>
+                                <th class="py-3">Trạng thái</th>
+                                <th class="py-3">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>#@item.UserId</td>
+                                    <td>@item.UserName</td>
+                                    <td>@item.Email</td>
+                                    <td>@item.Role.RoleName</td>
+                                    <td>
+                                        @if (item.Active == true)
+                                        {
+                                            <span class="badge badge-primary">Cho phép</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge badge-danger">Không cho phép</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <a asp-action="Edit" asp-route-id="@item.UserId" class="mx-2" data-toggle="tooltip" data-original-title="Edit"><i class="far fa-sliders-h text-dark"></i></a>
+                                        <a asp-action="Delete" asp-route-id="@item.UserId" data-toggle="tooltip" data-original-title="Xóa"><i class="far fa-trash-alt text-danger"></i></a>
+                                    </td>
+                                </tr>
+                            }
+
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mt-3 row col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center" aria-label="Page navigation example">
+        <ul class="pagination">
+            <pager class="pager-container" list="@Model" asp-area="Admin" asp-controller="AdminUsers" asp-action="Index" asp-route-RoleId="@ViewBag.CurrrentRoleId" />
+        </ul>
+    </div>
+</section>
+
+
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            jQuery("#txtRoleId").change(function () {
+                var roleId = jQuery(this).children(":selected").attr("value");
+                roleId = parseFloat(roleId);
+                $('#txtRoleId option').removeAttr('selected');
+                $("txtRoleId > [value=" + roleId + "]").attr("selected", "true");
+                $.ajax({
+                    url: '/Admin/AdminUsers/Filtter',
+                    datatype: "json",
+                    type: "GET",
+                    data: {
+                        RoleId: roleId
+                    },
+                    async: true,
+                    success: function (results) {
+                        if (results.status == "success") {
+                            window.location.href = results.redirectUrl;
+                        }
+                    },
+                    error: function (xhr) {
+                        alert("error");
+                    }
+                });
+            });
+        })
+    </script>
 }
-    </tbody>
-</table>
