--- a/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
+++ b/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
@@ -212,7 +212,7 @@
                                     <a class="nav-link" asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">Danh mục sản phẩm</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="border.html">Danh sách sản phẩm</a>
+                                    <a class="nav-link"  asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">Danh sách sản phẩm</a>
                                 </li>
                              
                             </ul>
