--- a/Plant/Areas/Admin/Views/AdminCategories/Delete.cshtml
+++ b/Plant/Areas/Admin/Views/AdminCategories/Delete.cshtml
@@ -1,28 +1,64 @@
-﻿@model Plant.Models.Category
+﻿@model Plant.Models.CategoryTranslation
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Delete</h1>
+<!-- Breadcrumb -->
+<nav class="hk-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb breadcrumb-light bg-transparent">
+        <li class="breadcrumb-item"><a href="#">Sản phẩm</a></li>
+        <li class="breadcrumb-item"><a asp-action="Index">Danh mục sản phẩm</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Xóa danh mục sản phẩm</li>
+    </ol>
+</nav>
+<!-- Container -->
+<div class="container-fluid px-lg-4">
+    <!-- Title -->
+    <div class="hk-pg-header">
+        <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="toggle-right"></i></span></span>Xóa danh mục sản phẩm</h4>
+    </div>
+    <!-- /Title -->
+    <!-- Row -->
+    <div class="row">
+        <div class="col-xl-12">
+            <section class="hk-sec-wrapper">
+                <form asp-action="Delete">
+                    <div class="row">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input asp-for="LangId" hidden/>
+                        <div class="form-group col-md-1 col-sm-12">
+                            <label asp-for="CategoryId" class="control-label">#Mã</label>
+                            <input asp-for="CategoryId" class="form-control" readonly />
+                        </div>
+                        <div class="form-group col-md-3 col-sm-12">
+                            <label class="control-label">Ngôn ngữ</label>
+                            <input asp-for="Lang.LangName" class="form-control" readonly />
+                        </div>
+                        <div class="form-group col-md-5 col-sm-12">
+                            <label class="control-label">Danh mục sản phẩm</label>
+                            <input asp-for="CategoryName" class="form-control" readonly />
+                        </div>
+                        <div class="form-group col-md-3 col-sm-12">
+                            <label class="control-label">Mã danh mục cha</label>
+                            <input asp-for="Category.ParentId" class="form-control" readonly />
+                        </div>
+                        <div class="form-group my-2 d-flex align-items-center">
+                            <a asp-action="Index" class="btn btn-dark mr-1">Đóng <i class="far fa-times"></i></a>
+                            <input type="submit" name="" value="Delete &#xf00c" class="btn btn-danger mr-2 fa-input">
+                        </div>
+                    </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
+                </form>
+
+            </section>
+        </div>
+    </div>
 </div>
+<!-- /Container -->
+
+
+@section Scripts {
+}
