--- a/Plant/Areas/Admin/Views/AdminProducts/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminProducts/Index.cshtml
@@ -1,42 +1,122 @@
-﻿@model IEnumerable<Plant.Models.Product>
+﻿@using PagedList.Core.Mvc
+@model PagedList.Core.IPagedList<Plant.ModelDto.ProductDto>
 
 @{
-    ViewData["Title"] = "Index";
+    int CurrentPage = ViewBag.CurrentPage;
+    ViewData["Title"] = "Index" + CurrentPage;
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Voucher)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductImg)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Voucher)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductImg)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
-            </td>
-        </tr>
+<!-- Breadcrumb -->
+<nav class="hk-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb breadcrumb-light bg-transparent">
+        <li class="breadcrumb-item"><a asp-action="Index"></a>Sản phẩm</li>
+        <li class="breadcrumb-item active" aria-current="page">Danh sách sản phẩm</li>
+    </ol>
+</nav>
+<!-- /Breadcrumb -->
+<!-- Title -->
+<div class="hk-pg-header">
+    <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="file-text"></i></span></span>Danh sách sản phẩm</h4>
+</div>
+<!-- /Title -->
+
+<section class="hk-sec-wrapper mb-3">
+    <div class="row">
+        <div class="form-group col-sm col-md-4 col-lg-3">
+            <select class="form-control" id="txtLangId" name="txtLangId" asp-items="ViewBag.Languages">
+                <option value="0" selected>Chọn ngôn ngữ</option>
+            </select>
+        </div>
+        <div class="form-group col-sm col-md-2 col-lg-2">
+            <a class="btn btn-info" asp-action="Create">
+                Add
+            </a>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-sm">
+            <div class="table-wrap">
+                <div class="table-responsive">
+                    <table class="table table-sm table-hover mb-0">
+                        <thead class="thead-light">
+                            <tr>
+                                <th class="py-3">#Mã</th>
+                                <th class="py-3">Hình ảnh</th>
+                                <th class="py-3">Tên</th>
+                                <th class="py-3">Giá nhập</th>
+                                <th class="py-3">Giảm giá</th>
+                                <th class="py-3">Giá bán</th>
+                                <th class="py-3">Màu sắc</th>
+                                <th class="py-3">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                            <tr>
+                                <td>#@item.ProductId</td>
+                                <td><div class="avatar avatar-xs rounded"><img src="~/image/product/@item.ImageFile" style="height:50px;width:50px;" /></div></td>
+                                <td>@item.ProductName</td>
+                                <td>@item.OriginalPrice</td>
+                                <td>@item.Voucher</td>
+                                <td>@item.Price</td>
+                                <td>
+                                    <div class="avatar avatar-xs rounded" style="background-color:green;"></div>
+                                </td>
+                                
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.ProductId" class="mx-2" data-toggle="tooltip" data-original-title="Edit"><i class="far fa-sliders-h text-dark"></i></a>
+                                    <a asp-action="Delete" asp-route-id="@item.ProductId" data-toggle="tooltip" data-original-title="Xóa"><i class="far fa-trash-alt text-danger"></i></a>
+                                </td>
+                            </tr>
+                            }
+
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mt-3 row col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center" aria-label="Page navigation example">
+        <ul class="pagination">
+            <pager class="pager-container" list="@Model" asp-area="Admin" asp-controller="AdminUsers" asp-action="Index" asp-route-LangId="@ViewBag.CurrrentLangId" />
+        </ul>
+    </div>
+</section>
+
+
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            jQuery("#txtLangId").change(function () {
+                var langId = jQuery(this).children(":selected").attr("value");
+                langId = parseFloat(langId);
+                $('#txtLangId option').removeAttr('selected');
+                $("txtLangId > [value=" + langId + "]").attr("selected", "true");
+                $.ajax({
+                    url: '/Admin/AdminProducts/Filtter',
+                    datatype: "json",
+                    type: "GET",
+                    data: {
+                        LangId: langId
+                    },
+                    async: true,
+                    success: function (results) {
+                        if (results.status == "success") {
+                            window.location.href = results.redirectUrl;
+                        }
+                    },
+                    error: function (xhr) {
+                        alert("error");
+                    }
+                });
+            });
+        })
+    </script>
 }
-    </tbody>
-</table>
