--- a/Plant/Views/Shared/_Layout.cshtml
+++ b/Plant/Views/Shared/_Layout.cshtml
@@ -223,7 +223,7 @@
                                             </div>
                                             <div class="mini_cart_footer">
                                                 <div class="cart_button">
-                                                    <a href="cart.html">
+                                                    <a asp-controller="Orders" asp-action="Cart">
                                                         <i class="fa fa-shopping-cart"></i> View
                                                         cart
                                                     </a>
